# kuberef

./: DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
src/kuberef/: main.py  watcher.py
test-manifests/: custom-workload.yaml
test-manifests/nested/: nested-deployment.yaml
tests/: test_parser.py  test_watcher.py
